--- a/index.html
+++ b/index.html
@@ -7,47 +7,49 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
     <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap&quot; rel="stylesheet">
-    <title>Em busca da cidade perdida</title>
+    <title>Nico e sua aventura</title>
 </head>
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
             <img src="img/cenario-passo0.png" alt="">
-            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+            <p>Em uma floresta ensolarada e amigável, nico acordava animado para sua aventura, encontrar a lendária fruta dourada, que dizem ter o sabor mais delicioso do mundo. ele sai de casa e acha uma bifurcação então decide seguir por...</p>
+            <button class="btn-proximo" data-proximo="1"> opção a: seguir pela trilha da esquerda, que parece mais iluminada.</button>
+            <button class="btn-proximo" data-proximo="2">opção b: seguir pela trilha da direita que tem um cheiro doce</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
-            <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+            <p>Você ecolhe a opção a </p>
+            <button class="btn-proximo" data-proximo="3">opção a1: tentar atravessar pulando nas pedras.</button>
+            <button class="btn-proximo" data-proximo="4"> Opção A2:Procurar uma ponte feita de cipó.</button>
+        
         </div>
         <div class="passo" id="passo-2">
-            <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
-            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+            <p>Você escolhe a opção b</p>
+            <button class="btn-proximo" data-proximo="5">Opção B1:Comer os frutos vermelhos para recuperar energia.</button>
+            <button class="btn-proximo" data-proximo="6">Opção B2:Ignorar os frutos e continuar andando.
+</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Se A1 (Pular nas pedras):Nico pode cair na água e ficar molhado, mas consegue atravessar. Ou pode escorregar e ter que voltar.</p>
+            <button class="btn-proximo" data-proximo="7">Próximo Passo (comum para a maioria dos caminhos): Nico ouve um barulho vindo de uma clareira.
+Na Clareira:Nico vê um pássaro colorido cantando perto de uma árvore especial.</button>
         </div>
 
         <div class="passo" id="passo-4">
             <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
-            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
-                encontrado.</p>
+            <p>Se A2 (Ponte de cipó):Nico atravessa com segurança e chega mais rápido ao outro lado.</p>
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+            <p>Se B1 (Comer frutos):Nico fica mais forte e animado para continuar. Ou pode sentir um pouco de sono.</p>
+            <button class="btn-proximo" data-proximo="7">Próximo Passo (comum para a maioria dos caminhos):Nico ouve um barulho vindo de uma clareira.
+Na Clareira:Nico vê um pássaro colorido cantando perto de uma árvore especial.</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <p>Se B2 (Ignorar frutos):Nico continua com a mesma energia, mas perde a chance de um lanche rápido.</p>
+            <button class="btn-proximo" data-proximo="8">Próximo Passo (comum para a maioria dos caminhos): Nico ouve um barulho vindo de uma clareira.
+Na Clareira: Nico vê um pássaro colorido cantando perto de uma árvore especial.</button>
         </div>
 
         <div class="passo" id="passo-7">
@@ -57,32 +59,33 @@
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>Próximo Passo (comum para a maioria dos caminhos):Nico ouve um barulho vindo de uma clareira.
+Na Clareira:Nico vê um pássaro colorido cantando perto de uma árvore especial.!</p>
+            <button class="btn-proximo" data-proximo="7">Próximo Passo (comum para a maioria dos caminhos):Nico ouve um barulho vindo de uma clareira.
+Na Clareira:Nico vê um pássaro colorido cantando perto de uma árvore especial.</button>
         </div>
 
         <div class="passo" id="passo-9">
-            <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Opção C:Perguntar ao pássaro onde encontrar a Fruta Dourada.</p>
+            <button class="btn-proximo" data-proximo="11">Se escolheu Opção C (Perguntar ao pássaro):O pássaro indica que a Fruta Dourada está no galho mais alto daquela árvore.</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
-            <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
+            <p>Opção D:Tentar encontrar a fruta sozinho na árvore.
+</p>
+            <button class="btn-proximo" data-proximo="12">Se escolheu Opção D (Encontrar sozinho):Nico procura e, com um pouco de sorte, avista a Fruta Dourada!</button>
         </div>
 
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
-                este lugar</p>
+            <p>Nico precisa subir na árvore para pegar a Fruta Dourada.</p>
         </div>
 
         <div class="passo" id="passo-12">
-            <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
-                que levam à cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+            <p>Final:Nico consegue pegar a Fruta Dourada! Ele a come e sente uma alegria imensa! Fim da aventura! 🎉
+</p>
+            <button class="btn-proximo" data-proximo="11">Final:Nico consegue pegar a Fruta Dourada! Ele a come e sente uma alegria imensa! Fim da aventura! 🎉
+</button>
         </div>
     </main>
     <script src="script.js"></script>
