--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@ Na Clareira:Nico vê um pássaro colorido cantando perto de uma árvore especial
 
         <div class="passo" id="passo-6">
             <p>Se B2 (Ignorar frutos):Nico continua com a mesma energia, mas perde a chance de um lanche rápido.</p>
-            <button class="btn-proximo" data-proximo="8">Próximo Passo (comum para a maioria dos caminhos): Nico ouve um barulho vindo de uma clareira.
-Na Clareira: Nico vê um pássaro colorido cantando perto de uma árvore especial.</button>
+            <button class="btn-proximo" data-proximo="8">Próximo Passo (comum para a maioria dos caminhos):Nico ouve um barulho vindo de uma clareira.
+Na Clareira:Nico vê um pássaro colorido cantando perto de uma árvore especial.</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+            <p>Próximo Passo (comum para a maioria dos caminhos):Nico ouve um barulho vindo de uma clareira.
+Na Clareira:Nico vê um pássaro colorido cantando perto de uma árvore especial.</p>
+            <button class="btn-proximo" data-proximo="9">Opção C:Perguntar ao pássaro onde encontrar a Fruta Dourada.</button>
+            <button class="btn-proximo" data-proximo="10">Opção D:Tentar encontrar a fruta sozinho na árvore.
+</button>
         </div>
 
         <div class="passo" id="passo-8">
