--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Na Clareira:Nico vê um pássaro colorido cantando perto de uma árvore especial
 
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Final:Nico consegue pegar a Fruta Dourada! Ele a come e sente uma alegria imensa! Fim da aventura!</p>
+            <p>Final:Nico consegue pegar a Fruta Dourada! Ele a come e sente uma alegria imensa! Fim da aventura!.</p>
         </div>
 
         <div class="passo" id="passo-12">
